--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --ext .js",
+    "build": "echo \"No build step defined\"",
+    "test": "mocha tests/**/*.js || echo \"No tests found\""
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,8 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "eslint": "^8.44.0",
+    "mocha": "^10.2.0"
   }
 }
