--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "nodemon": "^3.1.10",
     "eslint": "^8.44.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "selenium-webdriver": "^4.0.0"
   }
 }
