--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "eslint": "^8.44.0",
     "mocha": "^10.2.0",
     "selenium-webdriver": "^4.0.0"
+    "mocha-junit-reporter": "^2.2.0",
   }
 }
