--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon app.js",
     "lint": "eslint . --ext .js",
     "build": "echo \"No build step defined\"",
-    "test": "mocha --reporter mocha-junit-reporter --reporter-options mochaFile=reports/test-results.xml"
+    "test": "mkdir -p reports && mocha --reporter mocha-junit-reporter --reporter-options mochaFile=reports/test-results.xml"
+
 
   },
   "keywords": [],
